<resources>
    <string name="app_name">MainActivity</string>
    <string name="btn_home_compute">Faire un calcul</string>
    <string name="btn_compute">compute</string>
    <string name="second_operand">second operand</string>
    <string name="first_operand">first operand</string>
    <string name="result_format">Résultat : %s</string>
    <string name="btn_sos">SOS</string>
    <string name="btn_messages">message</string>
    <string name="btn_Google">Google</string>

</resources>